--- a/NASA  API.ipynb
+++ b/NASA  API.ipynb
@@ -491,14 +491,8 @@
     "- **ml_dists:** Source Distance, unidad = Parsec (pc)\n",
     "- **ml_xtimeein:**'  \n",
     "- **ml_massratio:**\n",
-    " ml_magis', \n",
-    " ml_radeinang',\n",
-    " ml_pmrells',\n",
-    " ml_pmrellserr1', \n",
-    " ml_pmrellserr2', \n",
-    " ml_pmrellslim', \n",
-    " ml_modeldef',\n",
-    " htmllink\n",
+    "- **ml_magis:** Source I-band unidad = mag \n",
+    "- **ml_radeinang:** Angular Einstein Radius, unidad = mas \n",
     " \n",
     " \n",
     " \n"
