--- a/NASA  API.ipynb
+++ b/NASA  API.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14425380",
+   "id": "69276fe2",
    "metadata": {},
    "source": [
     "### Primer dataframe"
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea8be0f",
+   "id": "06df8ea5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "566e293e",
+   "id": "73842e5c",
    "metadata": {},
    "source": [
     "#### Transformando lens_distance and source_distance de parsecs a años luz y agregandolos como nuevas columnas"
@@ -1016,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "3bf9c95e",
+   "id": "5a74ad09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "055afbc2",
+   "id": "0bd4aa7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d9462754",
+   "id": "7ff3846d",
    "metadata": {
     "scrolled": true
    },
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47574fa2",
+   "id": "293588a7",
    "metadata": {},
    "source": [
     "### Revisando valores duplicados"
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "95b86a6e",
+   "id": "2210563d",
    "metadata": {
     "scrolled": true
    },
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "19c8ec32",
+   "id": "f66083f8",
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0d6d56",
+   "id": "b02f1836",
    "metadata": {},
    "source": [
     "Puede leer la siguiente documentación para entender porque se le da el siguiente formato a ra_event y dec_event\n",
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "bb897aae",
+   "id": "73ad2632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4b5e7e31",
+   "id": "c1e96f32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "322ef0b4",
+   "id": "37e3f079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "7f712c1a",
+   "id": "2056ae3e",
    "metadata": {
     "collapsed": true
    },
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f74822ac",
+   "id": "4fbd8952",
    "metadata": {},
    "source": [
     "#### Saving microlensing data"
@@ -1867,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c6de1f94",
+   "id": "15ecf9c0",
    "metadata": {
     "collapsed": true
    },
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9625e7b",
+   "id": "734693c1",
    "metadata": {},
    "source": [
     "## Segundo DataFrame"
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c46fd6b4",
+   "id": "f7eb60df",
    "metadata": {},
    "source": [
     "Data column description:\n",
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eab4103e",
+   "id": "985732e8",
    "metadata": {},
    "source": [
     "### Data acqusition"
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9942a0",
+   "id": "a3c9847c",
    "metadata": {},
    "source": [
     "### Info"
@@ -2316,7 +2316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf3fb2f",
+   "id": "53802d96",
    "metadata": {},
    "source": [
     "### Wrangling"
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f546d7",
+   "id": "00bcd278",
    "metadata": {},
    "source": [
     "La columna st_spectype tiene un 63% de valores nulos, asi que se eliminara del dataframe ya que no es tan relevante para los fines de este proyecto. "
@@ -2333,7 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c9f4ccbd",
+   "id": "6c365f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2343,7 +2343,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c3365e20",
+   "id": "fe99c9aa",
    "metadata": {
     "collapsed": true
    },
@@ -2474,7 +2474,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "851bf228",
+   "id": "b6cb9b65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2487,7 +2487,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e210b03b",
+   "id": "3e6d9494",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7ab3a005",
+   "id": "28466e68",
    "metadata": {
     "collapsed": true
    },
@@ -2537,7 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3b3ccc73",
+   "id": "88efdd47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a01049e6",
+   "id": "d6ec9d73",
    "metadata": {
     "collapsed": true
    },
@@ -2576,7 +2576,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "dfdf6636",
+   "id": "92a0802d",
    "metadata": {
     "collapsed": true
    },
@@ -2780,7 +2780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76356ff0",
+   "id": "25e70cdc",
    "metadata": {},
    "source": [
     "### Revisando si hay valores duplicados"
@@ -2789,7 +2789,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "1f643939",
+   "id": "4b8d563e",
    "metadata": {},
    "outputs": [
     {
@@ -2820,7 +2820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8558d178",
+   "id": "634f0a40",
    "metadata": {},
    "source": [
     "#### Transformando la columna dist_system de pc a años luz y agrengandola como una nueva columna al dataframe"
@@ -2829,7 +2829,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "e838469e",
+   "id": "979a66a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2839,7 +2839,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0f03752b",
+   "id": "1e963431",
    "metadata": {
     "collapsed": true
    },
@@ -3057,7 +3057,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "9c4e4a13",
+   "id": "7412cb1e",
    "metadata": {},
    "outputs": [
     {
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08453fe",
+   "id": "aa49e0fc",
    "metadata": {},
    "source": [
     "#### Saving Planetary systems composite data "
@@ -3085,17 +3085,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "66dc9848",
+   "execution_count": 200,
+   "id": "2c663b04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps_comp.to_csv('ps_comp_data.csv')"
+    "ps_comp.to_csv('ps_comp_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "50c3809e",
+   "id": "ea385ff0",
    "metadata": {},
    "source": [
     "### Creando sub arreglo de microlensing"
@@ -3104,7 +3104,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "039b2e73",
+   "id": "f6bc6f76",
    "metadata": {
     "collapsed": true
    },
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa2e45e0",
+   "id": "f33601bf",
    "metadata": {},
    "source": [
     "## Tercer DataFrame"
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "15c1dc04",
+   "id": "7eeb2df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3149,7 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "df25df12",
+   "id": "17a274e2",
    "metadata": {
     "collapsed": true
    },
@@ -3283,7 +3283,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "2501878d",
+   "id": "a17dd138",
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3304,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "97a55647",
+   "id": "e9c2695c",
    "metadata": {
     "collapsed": true
    },
@@ -3415,7 +3415,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1ef40c15",
+   "id": "9d55c282",
    "metadata": {
     "collapsed": true
    },
@@ -3549,7 +3549,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "f84ed6d0",
+   "id": "5f93104f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3559,7 +3559,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "67a1b65d",
+   "id": "2e7a8853",
    "metadata": {
     "collapsed": true
    },
@@ -3785,7 +3785,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "20dc5cc6",
+   "id": "e98d4d69",
    "metadata": {},
    "outputs": [
     {
@@ -3805,7 +3805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0050b3f",
+   "id": "350c6dc8",
    "metadata": {},
    "source": [
     "Las columnas earth_masses y jupiter_massses seran remplazadas por planet_mass_earth y planet_mass_jupiter.\n",
@@ -3816,7 +3816,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "72032e35",
+   "id": "32011312",
    "metadata": {
     "collapsed": true
    },
@@ -3871,7 +3871,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "c635fb14",
+   "id": "0ba67856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3881,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "8adc321e",
+   "id": "45efc74b",
    "metadata": {
     "collapsed": true
    },
@@ -4114,7 +4114,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "b5f57f0d",
+   "id": "2918f464",
    "metadata": {},
    "outputs": [
     {
@@ -4146,7 +4146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "191456f2",
+   "id": "84eb68f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4154,14 +4154,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18cc2d7",
+   "id": "99667ab2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fa10ac16",
+   "id": "b9cb380a",
    "metadata": {},
    "source": [
     "### Analizing ps_comp"
@@ -4169,7 +4169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0321c53e",
+   "id": "1cf389cf",
    "metadata": {},
    "source": [
     "La mayoría de exoplanetas han sido descubiertos por el metodo de transito "
@@ -4178,7 +4178,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "579346ec",
+   "id": "ad9793b7",
    "metadata": {},
    "outputs": [
     {
@@ -4214,7 +4214,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cfcc1ce8",
+   "id": "8cfbe22c",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -4223,7 +4223,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "179a8c36",
+   "id": "2e7bf067",
    "metadata": {},
    "outputs": [
     {
@@ -4256,7 +4256,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "1637dca2",
+   "id": "a0ead7d5",
    "metadata": {},
    "outputs": [
     {
@@ -4612,7 +4612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "786de859",
+   "id": "cffc1fc0",
    "metadata": {},
    "outputs": [],
    "source": []
