--- a/NASA  API.ipynb
+++ b/NASA  API.ipynb
@@ -123,9 +123,7 @@
    "cell_type": "code",
    "execution_count": 101,
    "id": "1096c1c8",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2465,14 +2463,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "ae008da4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "id": "b6cb9b65",
    "metadata": {},
@@ -4615,7 +4605,108 @@
    "id": "cffc1fc0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def request_api():\n",
+    "    url = \n",
+    "    return response = requests.get(url)\n",
+    "\n",
+    "def df_micrlen(response):\n",
+    "    mlen = pd.DataFrame(response.json())\n",
+    "    return mlen\n",
+    "\n",
+    "def wranglig(mlen):\n",
+    "    to_keep = ['pl_name', 'rastr', 'decstr', 'pl_masse', 'pl_massj', 'pl_orbsmax', 'sy_dist',\n",
+    "           'ml_dists', 'ml_xtimeein', 'ml_massratio', 'ml_magis', 'ml_radeinang']\n",
+    "    \n",
+    "    mlen = mlen[to_keep]\n",
+    "    \n",
+    "    new_names = ['planet_name',  'ra_event', 'dec_event', 'earth_massses', 'jupiter_masses', \n",
+    "              'planet_orbmax', 'lens_distance', 'source_distance', 'einstein_cross_time', 'source_mag',\n",
+    "             'planet_star_mass_ratio', 'angular_einstein_radius']\n",
+    "    \n",
+    "    old_names = [name for name in mlen.columns]\n",
+    "    \n",
+    "    dict_names = (dict(zip(old_names, new_names)))\n",
+    "    \n",
+    "    mlen.rename(columns=dict_names, inplace=True)\n",
+    "    \n",
+    "    mlen['lens_distance_ly'] = mlen['lens_distance'] * 3.262\n",
+    "    \n",
+    "    mlen['source_distance_ly'] = mlen['source_distance'] * 3.262\n",
+    "    \n",
+    "    mlen['ra_event'] = mlen['ra_event'].str.replace(r'[hm]', ' ', regex=True).str.replace(r's', '', regex=True)\n",
+    "    \n",
+    "    mlen['ra_event'] = mlen['ra_event'].str.strip()\n",
+    "    \n",
+    "    mlen['dec_event'] = mlen['dec_event'].str.replace(r'[dm]', ' ', regex=True).str.replace(r's', '', regex=True)\n",
+    "    \n",
+    "    mlen.to_csv('microlensing_data.csv', index=False)\n",
+    "    \n",
+    "    return mlen\n",
+    "\n",
+    "def request_api_second():\n",
+    "    url = \n",
+    "    return response = requests.get(url)\n",
+    "    \n",
+    "def df_pscomp(response):\n",
+    "    ps_comp = pd.DataFrame(response.json())\n",
+    "    \n",
+    "def wranglig_pscmop(ps_comp):\n",
+    "    ps_comp.drop(columns='st_spectype', inplace=True)\n",
+    "    \n",
+    "    new_names_ps = ['planet_name', 'hostname', 'sys_num_stars', 'sys_num_planet', 'discovery_method', \n",
+    "                'discovery_year', 'discovery_telescope', 'orbital_period', 'orbital_semi_major', 'planet_radius_earth',\n",
+    "               'planet_radius_jupiter', 'planet_mass_earth', 'planet_mass_jupiter', 'eccentricity', 'stellar_eff_temp',\n",
+    "               'stellar_radius', 'stellar_mass', 'dist_system']\n",
+    "    \n",
+    "    old_names_ps = [colum for colum in ps_comp.columns]\n",
+    "    \n",
+    "    dict_ps = dict(zip(old_names_ps, new_names_ps))\n",
+    "    \n",
+    "    ps_comp.rename(columns=dict_ps, inplace=True)\n",
+    "    \n",
+    "    ps_comp['dist_system_ly'] = ps_comp['dist_system'] * 3.262\n",
+    "    \n",
+    "    ps_comp.to_csv('ps_comp_data.csv', index=False)\n",
+    "    \n",
+    "    return ps_comp\n",
+    "\n",
+    "def df_psmlen(ps_comp):\n",
+    "    ps_mlen = ps_comp.loc[ps_comp['discovery_method'] == 'Microlensing']\n",
+    "    \n",
+    "    return ps_mlen\n",
+    "\n",
+    "def merge(ps_mlen, mlen):\n",
+    "    merged = pd.merge(mlen, ps_mlen, on='planet_name')\n",
+    "    \n",
+    "    merged.drop(columns=['earth_massses', 'jupiter_masses', 'orbital_period', 'stellar_eff_temp', 'stellar_radius', 'eccentricity'], inplace=True)\n",
+    "    \n",
+    "    return merged\n",
+    "\n",
+    "def analyze(ps_comp):\n",
+    "    merged['planet_name'].value_counts()\n",
+    "    \n",
+    "    results = ps_comp.sort_values('orbital_period', ascending=False).head(10)\n",
+    "    \n",
+    "    return results\n",
+    "    \n",
+    "def visualize(ps_comp):\n",
+    "    bar = ps_comp['discovery_method'].value_counts().plot(kind='bar')\n",
+    "    \n",
+    "    return bar\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    request= request_api()\n",
+    "    df_1 = df_micrlen(request)\n",
+    "    wrangle = wranglig(df_1)\n",
+    "    request_second = request_api_second()\n",
+    "    df_2 = df_pscomp(request_second)\n",
+    "    wrangle_df2 = wranglig_pscmop(df_2)\n",
+    "    df_3 = df_psmlen(wrangle_df2)\n",
+    "    merge = merge(df_1, df_3)\n",
+    "    analysis = analyze(df_2)\n",
+    "    visual = visualize(df_2)"
+   ]
   }
  ],
  "metadata": {
