--- a/NASA  API.ipynb
+++ b/NASA  API.ipynb
@@ -4233,6 +4233,38 @@
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "234c4672",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Transit                          3416\n",
+       "Radial Velocity                   879\n",
+       "Microlensing                      114\n",
+       "Imaging                            54\n",
+       "Transit Timing Variations          22\n",
+       "Eclipse Timing Variations          16\n",
+       "Orbital Brightness Modulation       9\n",
+       "Pulsar Timing                       7\n",
+       "Pulsation Timing Variations         2\n",
+       "Disk Kinematics                     1\n",
+       "Astrometry                          1\n",
+       "Name: discovery_method, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps_comp['discovery_method'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "ca1e4d46",
    "metadata": {
     "scrolled": false
@@ -4510,6 +4542,57 @@
    "metadata": {},
    "source": [
     "# Quieres colocarlos como xticks en la gráfica de abajo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "097f9770",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016    1521\n",
+       "2014     872\n",
+       "2018     326\n",
+       "2020     227\n",
+       "2019     204\n",
+       "2015     157\n",
+       "2017     153\n",
+       "2021     144\n",
+       "2012     139\n",
+       "2011     138\n",
+       "2013     126\n",
+       "2010      97\n",
+       "2009      95\n",
+       "2008      66\n",
+       "2007      52\n",
+       "2005      36\n",
+       "2006      31\n",
+       "2002      29\n",
+       "2004      27\n",
+       "2003      22\n",
+       "2000      16\n",
+       "1999      13\n",
+       "2001      12\n",
+       "1998       6\n",
+       "1996       6\n",
+       "1992       2\n",
+       "1995       1\n",
+       "1997       1\n",
+       "1994       1\n",
+       "1989       1\n",
+       "Name: discovery_year, dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps_comp['discovery_year'].value_counts()"
    ]
   },
   {
